<resources>
    <string name="app_name">StartProject</string>
    <string name="but_lang">ع</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="image" translatable="false">image</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_new">Register new</string>
    <string name="email_is_empty">Email Address is empty</string>
    <string name="general_toast">General toast</string>
    <string name="list">List</string>
    <string name="recycler_view">Recycler view</string>
    <string name="web">Web</string>
</resources>