<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreenActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/but_ListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/but_base_style"
                android:fontFamily="@font/cairo"
                android:inputType="text"
                android:text="@string/list"
                android:textColor="@color/white"
                android:visibility="visible"
                tools:ignore="TextViewEdits" />

            <Button
                android:id="@+id/but_Recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/but_base_style"
                android:fontFamily="@font/cairo"
                android:inputType="text"
                android:text="@string/recycler_view"
                android:textColor="@color/white"
                android:visibility="visible"
                tools:ignore="TextViewEdits" />

            <Button
                android:id="@+id/but_webView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/but_base_style"
                android:fontFamily="@font/cairo"
                android:inputType="text"
                android:text="@string/web"
                android:textColor="@color/white"
                android:visibility="visible"
                tools:ignore="TextViewEdits" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>